# promptshield

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
promptshield/: __init__.py  api.py  classifier.py  cli.py  heuristics.py  shield.py
tests/: test_heuristics.py  test_shield.py
