[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "promptshield"
version = "0.1.0"
description = "Layered prompt-injection & jailbreak defense (Prompt-Guard-2 + heuristics) with an LLM gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Justin" }]
keywords = ["llm-security", "prompt-injection", "jailbreak", "guardrails", "groq", "ai-safety", "llm"]
dependencies = [
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.scripts]
promptshield = "promptshield.cli:main"

[tool.setuptools.packages.find]
include = ["promptshield*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
